Fix mistake when transitioning to the new defines with ZFS loader. I hate adding yet another define, but it is the lessor of the evil choices available. Kill another evil by removing PATH_BOOT3 and replacing it with PATH_LOADER or PATH_LOADER_ZFS as appropriate.

PR: 206659

Former-commit-id: 01c1ed170a815b748e1ff863e460a3a780dffbcd