sys/boot/pc98/boot2/boot2.c
@@ -1896,7 +1896,7 @@ condition|)
 block|{
 name|kname
 operator|=
-name|PATH_BOOT3
+name|PATH_LOADER
 expr_stmt|;
 if|if
 condition|(
